fix: Fix issue navbar links overlapping brand title

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,6 +37,7 @@ body {
   font-family: "Akaya Telivigala", system-ui, sans-serif;
   font-size: 2.5rem;
   font-weight: 400;
+  padding-right: 5rem;
   color: currentColor;
 }
 
